--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     "require": {
         "php": "^7.2.5|^7.4|^8.0 |^8.1",
         "guzzlehttp/guzzle": "6.* | 7.*",
-        "laravel/framework": "7.* | 8.* | 9.*"
+        "laravel/framework": "7.* | 8.* | 9.*| 10.*",
+        "spatie/laravel-package-tools": "^1.13"
     }
 }
